(fix) Fixed message input padding on mobile. Fixed font-size in message box and input on mobile/desktop.

--- a/scss/components/_message.scss
+++ b/scss/components/_message.scss
@@ -1,4 +1,4 @@
-messages .message {
+.message {
   padding: 10px 20px 10px 10px;
   margin-bottom: 15px;
   background-color: $shuttle-gray;
@@ -9,29 +9,38 @@ messages .message {
   word-wrap: break-word;
 }
 
-.message.own {
+.own {
   margin-left: auto !important;
   background-color: $accent !important;
 }
 
-messages .message .meta {
+.meta {
   font-size: 15px;
   font-weight: bold;
   margin-bottom: 7px;
 }
 
-messages .message .timestamp {
+.timestamp {
   float: right;
   font-size: 12px;
 }
 
-messages .bot-message {
+.bot-message {
   font-size: 12px;
   text-align: center;
   padding: 4px 0px 4px 0px;
   margin: 10px 0 10px 0;
 }
 
-messages .message > p.text {
+.text {
   margin-bottom: 2px;
+  font-size: 100%;
+}
+
+@media(min-width: 750px) {
+
+  .text {
+    font-size: 150%;
+  }
+
 }
